just fix absolute covering in mobile!

--- a/style.css
+++ b/style.css
@@ -13,13 +13,11 @@
   font-family: 'Cinzel', serif;
 }
 @media only screen and (max-width: 600px){
-  .tall{
-    height: 35rem;
+ 
    }
    .hide{
     display: none !important;
   }
-}
 
 button{
   width: 85px;
@@ -29,11 +27,12 @@ button{
   min-width: 5rem;
 }
 
-
+.tall{
+  height: 20rem;
 }
 img{
- width: inherit;
-  height: auto;
+ max-width: inherit;
+max-height: inherit;
 }
 .b-l{
   border-left: green solid 10px ;
